--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <section>
       <h2>Upload Your ID</h2>
-      <form action="https://formsubmit.co/your@email.com" method="POST" enctype="multipart/form-data">
+      <form action="https://formsubmit.co/loveyourlist23@email.com" method="POST" enctype="multipart/form-data">
         <label for="email">Your Email</label>
         <input type="email" name="email" required />
 
